WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11328
Gmail Editor: Caret can simultaneously appear in both the TO: and message body fields
https://bugs.webkit.org/show_bug.cgi?id=11328
Summary
Gmail Editor: Caret can simultaneously appear in both the TO: and message bod...
Chris Petersen
Reported
2006-10-17 15:08:32 PDT
SUMMARY: While in a new rich text message, the caret can simultaneously appear in both the TO: and message body fields. This only happens if I switch from the current window ( containing the gmail message) then back again to this window. STEPS TO REPRODUCE 1. Under
r17089
, login to your Gmail account 2. Create a new rich text message 3. Place the caret into the message body field 4. Create a new browser window so that it becomes the top most window 5. Bring the window (that contains the gmail message) back to the front by clicking this window's title bar. 6. After this window comes to the front, notice you have TWO carets displayed. One in the TO: field and the other in the message body. * RESULTS The caret should only be displayed in the message body but it also appears in the To: field.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Petersen
Comment 1
2006-10-17 15:12:03 PDT
This is filed as <
rdar://problem/4785816
>
Justin Garcia
Comment 2
2007-02-09 15:38:01 PST
Fixed in
r19546
.
mitz
Comment 3
2007-02-10 01:22:53 PST
***
Bug 11770
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug