LayoutTests:

Reviewed by darin

        * editing/selection/4975120-expected.checksum: Added.
        * editing/selection/4975120-expected.png: Added.
        * editing/selection/4975120-expected.txt: Added.
        * editing/selection/4975120.html: Added.

WebCore:

        Reviewed by darin

        <rdar://problem/4975120>
        REGRESSION: double-cursor after switching window away/back (11770)
        <http://bugs.webkit.org/show_bug.cgi?id=11328>
        Gmail Editor: Caret can simultaneously appear in both the TO: and message body fields

        * page/mac/WebCoreFrameBridge.h: Removed two unused methods
        left over from the old form control implementation.

WebKit:

        Reviewed by darin

        <rdar://problem/4975120>
        REGRESSION: double-cursor after switching window away/back (11770)
        <http://bugs.webkit.org/show_bug.cgi?id=11328>
        Gmail Editor: Caret can simultaneously appear in both the TO: and message body fields

        * WebCoreSupport/WebFrameBridge.mm: Removed unused methods.
        * WebView/WebHTMLView.mm: Ditto.
        (-[WebHTMLView _web_firstResponderCausesFocusDisplay]): Don't
        appear focused if a descendant view is firstResponder.
        (-[WebHTMLView _updateActiveState]): Removed the check for a BOOL
        that was always false.
        * WebView/WebHTMLViewInternal.h: Removed a BOOL that's always false.



Canonical link: https://commits.webkit.org/16432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19546 268f45cc-cd09-0410-ab3c-d52691b4dbfc