WebCore/page/mac/WebCoreFrameBridge.h
@@ -275,9 +275,6 @@ typedef enum ObjectElementType {
 
 - (void)runOpenPanelForFileButtonWithResultListener:(id <WebCoreOpenPanelResultListener>)resultListener;
 
-- (void)formControlIsBecomingFirstResponder:(NSView *)formControl;
-- (void)formControlIsResigningFirstResponder:(NSView *)formControl;
-
 - (void)setNeedsReapplyStyles;
 
 - (NSView *)viewForPluginWithURL:(NSURL *)URL
